# agentops

./: .gitignore  AGENTS-CI.md  AGENTS-CODEX.md  AGENTS-RUNTIME.md  AGENTS-WORKFLOW.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  GOALS.md  MEMORY.md  PRACTICE-REGISTRY.md  PRACTICE.md  PRODUCT.md  PROGRAM.md  README.md  SDK-INVENTORY.md  goals-affects-files.yaml  mkdocs.yml  registry.json  requirements-docs.txt
.agents/: schedule.yaml.example
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.githooks/: pre-commit  pre-push
cli/: .gitignore  .golangci.yml  AGENTS.md  Makefile  go.mod  go.sum
docs/: 3.0-readiness.md  3.0.md  ARCHITECTURE.md  CHANGELOG.md  CI-CD.md  CONTRIBUTING.md  ENV-VARS.md  FAQ.md  GLOSSARY.md  HOOKS.md  INDEX.md  LOOP-BUDGET.md  RELEASING.md  ROADMAP.md  SCHEMAS.md  SKILL-API.md  SKILL-ROUTER.md  SKILLS.md  TESTING.md  UPGRADING.md  activation-profiles.md  agentops-3-explainer-kit.md  agentops-3-pmf-evidence-loop.md  agentops-3-youtube-starter-series.md  agentops-brief.md  agentops-system-map.md  agents-operator-guide.md  assurance-profile.md  brownian-ratchet.md  cdlc.md  cli-skills-map.md  cli-surface.json  cli-surface.md  context-lifecycle.md  context-packet.md  curation-pipeline.md  daemon-migration.md  documentation-index.md  domain-practice-packets.md  first-value-path.md  (+23 more)
evals/workbench/python-api/: Makefile  pyproject.toml
evals/workbench/python-api/app/: db.py  main.py  models.py
evals/workbench/python-api/tests/: conftest.py  test_main.py
hooks/: ao-agents-check.sh  ao-feedback-loop.sh  ao-inject.sh  (+41 more)
(+2836 files in other folders)
